# TTP-GRASP

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README  c1.conf  c2.conf  main.cpp
grasp/: CMakeLists.txt  grasp.cpp  grasp.hpp  mutationmethods.hpp  optimizer.cpp  optimizer.hpp
ttp/: CMakeLists.txt  item.hpp  problem.hpp  solution.hpp  ttpinstance.cpp  ttpinstance.hpp  ttpsolution.cpp  ttpsolution.hpp  ttpsolutionfeatures.cpp
